--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=8080
-MONGODB_CNN=mongodb+srv://user_node_cafe:PeomY9xFstx1ziO3@miclustercafe.aqk6n.mongodb.net/cafeDB
+MONGODB_CNN=mongodb+srv://user_node_cafe:GalrIQ50xRaVszxA@miclustercafe.aqk6n.mongodb.net/cafeDB
