--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=8080
 MONGODB_CNN=mongodb+srv://user_node_cafe:GalrIQ50xRaVszxA@miclustercafe.aqk6n.mongodb.net/cafeDB
+SECRETORPRIVATEKEY=Est03sMyPub1ck3y23@913
